--- a/lecture/lecture_07_security_sql_xss/demo-2-sql-begin/package.json
+++ b/lecture/lecture_07_security_sql_xss/demo-2-sql-begin/package.json
@@ -10,7 +10,8 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "^4.18.2",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "sqlite3": "^5.1.7"
   },
   "description": "This is a starter project for Express. It was created with the express project generator and then modified to be a module type (uses imports instead of requires, based on this tutorial), and with VSCode launch settings.",
   "main": "app.js",
