--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.0",
+    "express-session": "^1.18.1",
     "fs": "^0.0.1-security"
   }
 }
